# lucille

./: .gitignore  AUTHORS  ChangeLog  ChangeLog_jp.txt  INSTALL  INSTALL.Solaris  LICENSE  MEMO  Makefile  Makefile.am  README  README.rst  SConstruct  TODO  bootstrap  configure.in  custom.py  index.html
doc/programmers/: Makefile  README.txt  commands.rst  conf.py  index.rst  intro.rst  package.rst  programmers.rst  scene.rst  source.rst
doc/userman/: Makefile  cgkit.rst  conf.py  index.rst  intro.rst  setup.rst  tutorial.rst
examples/: tut1.rib
examples/ambient_occlusion/: ambient_occlusion.rib
examples/plane_sphere/: Scene_DEFAULT_Set0.rib
examples/texparam/: st1.rib  st2.rib
exporters/houdini/: README.txt  htol.py
include/: ndspy.h  ri.h
rnd/FurRender/: Makefile  NOTE.jp.txt  README.txt  curve.c  curve.h  main.cpp
rnd/HaskellRSLCompiler/: Main.hs  Makefile  NOTES.txt  README.txt  RSL.cabal  RSLAST.hs  RSLParser.hs  TODO.txt  input.sl
rnd/HaskellRSLCompiler/RSL/: AST.hs  CFG.hs  CodeGenC.hs  CodeGenLLVM.hs  PPrint.hs  PPrintAST.hs  Parser.hs  RSL.hs  Sema.hs  Typer.hs
rnd/HaskellRSLCompiler/test/: cond01.sl  test.py
rnd/HaskellRSLCompiler/test/parse/: abs.sl  acos.sl  ambient.sl  asin.sl  atan.sl  ceil.sl  clamp.sl  cos.sl  ctransform.sl  degrees.sl  depth.sl  diffuse.sl  distance.sl  exp.sl  facefowrard.sl  floor.sl  inversesqrt.sl  length.sl  log.sl  mix.sl  mod.sl  noise_c.sl  noise_f.sl  noise_p.sl  noise_v.sl  normalize.sl  ntransform.sl  output_spec.sl  phong.sl  pi.sl  pow.sl  radians.sl  random.sl  reflect.sl  refract.sl  round.sl  sign.sl  sin.sl  smoothstep.sl  specular.sl  (+11 more)
rnd/MieScattering/: Makefile  lognormal.py  main.cpp  mie.c  mie.h
rnd/ShaderEngine/: Makefile  MyGLWindow.cpp  MyGLWindow.h  NOTE.txt  README.binary.txt  README.txt  cachelib.cpp  cachelib.h  callbacks.cpp  callbacks.h  compile.py  constants.h  dist_make.sh  gen.py  gui.cpp  gui.fl  gui.h  hbuffer.cpp  hbuffer.h  jit.cpp  jit.h  main.cpp  mandel.sl  matte.sl  noise.c  noise.h  occlusion.cpp  occlusion.h  occlusion.sl  output.ll  render.cpp  render.h  renderer.cpp  renderer.h  shader_env.h  shader_env.ll  shaderlib.c  timer.cpp  timer.h  vec.h
rnd/doc/: lorenz_mie.rst
rnd/latlong/: Makefile  main.py
rnd/qtgui/: Makefile  main.cpp  qt.pro  run.sh
shaders/: ambientocclusion.sl  checker.sl  constant.sl  granite.sl  matte.sdl  matte.sl  metal.sl  mirror.sl  normdir.c  normdir.sl  null.sl  paintedplastic.sl  plastic.sl  shinymetal.sl  show_st.sl  show_xyz.sl  texturemapping.sl  turbulence.sl  turbulence2.sl  weird.sl  whitted.sl  whitted2.sl  wood.sl
shaders/tests/: colorspacetest.sl
src/: Makefile  Makefile.am  Makefile.gcc  Makefile.icc  Makefile.nmake  Makefile.sun  SConscript  accel.c  accel.h  apitable.h  array.c  array.h  attribute.c  backdoor.c  brdf.c  brdf.h  bsp.c  bsp.h  bssrdf.c  bssrdf.h  camera.c  camera.h  clipper.c  clipper.h  context.c  entropy_as.c  entropy_as.h  film.c  film.h  filter.c  framebufferdrv.c  geom.c  geom.h  hash.c  hilbert.h  hilbert2d.h  htm.c  htm.h  ibl.c  ibl.h  (+91 more)
src/base/: Makefile.am  SConscript  array.c  array.h  atomic.h  common.h  dlload.c  dlload.h  geometric.c  geometric.h  hash.c  hash.h  list.c  list.h  log.c  log.h  make.include  matrix.c  matrix.h  memory.c  memory.h  parallel.c  parallel.h  quaternion.c  quaternion.h  queue.c  queue.h  random.c  random.h  stack.c  stack.h  system.c  system.h  thread.c  thread.h  timer.c  timer.h  util.c  util.h  vector.c  (+1 more)
src/basic/: Makefile.am  array.c  array.h  atomic.h  common.h  dlload.c  make.include  matrix.c  matrix.h  memory.c  quaternion.c  quaternion.h  queue.c  queue.h  random.c  thread.h
src/display/: Makefile  Makefile.am  README.txt  SConscript  framebufferdrv.c  framebufferdrv.h  hdrdrv.c  hdrdrv.h  jpeg.h  openexrdrv.c  openexrdrv.h  sockdrv.c  sockdrv_defs.h
src/gui/: SConscript
src/imageio/: README.txt  SConscript  image_loader.c  image_loader.h  image_saver.c  image_saver.h  jpeg.c  jpeg.h  rgbe.h
src/lsh/: Makefile  Makefile.am  Makefile.gcc  Makefile.icc  Makefile.nmake  Makefile.sun  SConscript  lexrib.c  lexrib.l  lsh.c  lsh.h  main.c  parserib.c  parserib.h  parserib.y
src/render/: Makefile  Makefile.am  SConscript  accel.c  accel.h  beam.c  beam.h  brdf.c  brdf.h  bvh.c  bvh.h  debugger.h  film.h  geom.c  geom.h  hilbert.c  hilbert2d.c  ibl.c  ibl.h  intersection_state.c  intersection_state.h  light.c  light.h  material.c  mc.c  mc.h  polygon.c  qmc.c  qmc.h  quadric.c  raster.c  raster.h  ray.c  ray.h  raytrace.c  raytrace.h  reflection.c  reflection.h  render.c  render.h  (+32 more)
src/ri/: Makefile  Makefile.am  SConscript  apitable.c  apitable.h  attribute.c  attribute.h  backdoor.c  backdoor.h  camera.c  camera.h  context.c  context.h  declare.c  declare.h  display.c  display.h  lightsource.c  option.c  option.h  polygon.c  quadric.c  ri.c  subdivision.c  transform.c
src/shader/: Makefile  README.txt  SConscript  llvm_bridge.cpp  llvm_bridge.h  shaderengine.c  shaderengine.h
src/sl/: Makefile.am  README  lexsl.c  lexsl.l  lsc  lsc_novec  lsc_vec  lsc_vecg  opcodes.def  parsesl.c  parsesl.h  parsesl.y  sl2c.c  sl2c.h  sym.c  sym.h  tree.c  tree.h
src/testbed/: .gdbinit  BVHVisualizer.cpp  BVHVisualizer.h  DirectLighting.c  DirectLighting.h  GLView.cpp  GLView.h  HDRImageView.cpp  HDRImageView.h  IBLSampler.c  IBLSampler.h  README.txt  SConscript  controller.cpp  controller.h  defines.h  glm.cpp  glm.h  grace128.hdr  gui.fl  main.cpp  menu.h  pi128.hdr  simplerender.c  simplerender.cpp  simplerender.h  timer.h  white128.hdr
src/transport/: Makefile  Makefile.am  SConscript  ambientocclusion.c  ambientocclusion.h  dirtmap.c  dirtmap.h  path.h  pathtrace.c  pathtrace.h  transport.c  transport.h  whitted.c  whitted.h
tests/: Makefile.am  run_tests.sh
tests/ribparse/: Makefile  empty_scene_20081119.rib  expected.py  indices_shortage_20081221.rib  (+5 more)
tools/: Makefile.am  bspview.c  hdr2array.c  hdr2exr.c  hdr2png.c  hdr2tex  hdr2tex.c  hdrcmp.c  hdrdisplay.c  icview.c  jpeg.c  jpeg.h  jpg2array.c  jpg2hdr.c  jpg2tex.c  pmapview.c  rgbe.c  rpathview.c
(+114 files in other folders)
