SUBDIRS = src tools 

EXTRA_DIST = LICENSE \
	     COPYING \
	     NEWS \
	     bootstrap \
	     ChangeLog \
	     doc/FILES.txt \
	     vs6build/vs6build.dsp \
	     vs6build/vs6build.dsw \
	     vs6build/vs6build/vs6build.dsp \
	     vs6build/lsh/lsh.dsp \
	     vs03build/vs03build.sln \
	     vs03build/librib/librib.vcproj \
	     vs03build/lsh/lsh.vcproj \
	     vs7build/vs7build.sln \
	     vs7build/librib/librib.vcproj \
	     vs7build/lsh/lsh.vcproj \
	     vs7build/lucille_mfc/lucille_mfc.sln \
	     vs7build/lucille_mfc/lucille_mfc.vcproj \
	     vs7build/lucille_mfc/lucille_mfc.rc \
	     vs7build/lucille_mfc/lucille_mfc.h \
	     vs7build/lucille_mfc/lucille_mfc.cpp \
	     vs7build/lucille_mfc/lucille_mfcDlg.h \
	     vs7build/lucille_mfc/lucille_mfcDlg.cpp \
	     vs7build/lucille_mfc/stdafx.h \
	     vs7build/lucille_mfc/stdafx.cpp \
	     vs7build/lucille_mfc/resource.h \
	     vs7build/lucille_mfc/res/lucille_mfc.ico \
	     vs7build/lucille_mfc/res/lucille_mfc.manifest \
	     vs7build/lucille_mfc/res/lucille_mfc.rc2 \
	     osxbuild/lucille.xcode/project.pbxproj \
	     osxbuild/lucilleLauncher.h \
	     osxbuild/lucilleLauncher.m \
	     osxbuild/taskwrapper.h \
	     osxbuild/taskwrapper.m \
	     osxbuild/DragTextField.h \
	     osxbuild/DragTextField.m \
	     osxbuild/English.lproj/InfoPlist.strings \
	     osxbuild/English.lproj/MainMenu.nib/classes.nib \
	     osxbuild/English.lproj/MainMenu.nib/info.nib \
	     osxbuild/Japanese.lproj/InfoPlist.strings \
	     osxbuild/Japanese.lproj/MainMenu.nib/classes.nib \
	     osxbuild/Japanese.lproj/MainMenu.nib/info.nib 
	     
