SUBDIRS = . lsh sl

include_HEADERS = ri.h

lib_LIBRARIES = librib.a
librib_a_SOURCES = accel.c \
		   accel.h \
		   apitable.c \
		   apitable.h \
		   array.c \
		   array.h \
		   attribute.c \
		   attribute.h \
		   backdoor.c \
		   backdoor.h \
		   brdf.c \
		   brdf.h \
		   bsp.c \
		   bsp.h \
		   bssrdf.c \
		   bssrdf.h \
		   camera.c \
		   camera.h \
		   context.c \
		   context.h \
		   declare.c \
		   declare.h \
		   display.c \
		   display.h \
		   dlload.c \
		   dlload.h \
		   film.h \
		   film.c \
		   filter.c \
		   framebufferdrv.c \
		   framebufferdrv.h \
		   geom.c \
		   geom.h \
		   hash.c \
		   hash.h \
		   hdrdrv.c \
		   hdrdrv.h \
		   hilbert.c \
		   hilbert.h \
		   hilbert2d.c \
		   hilbert2d.h \
		   htm.c \
		   htm.h \
		   ibl.c \
		   ibl.h \
		   irradcache.c \
		   irradcache.h \
		   jpeg.c \
		   jpeg.h \
		   kdtree.c \
		   list.c \
		   list.h \
		   light.c \
		   light.h \
		   loader_obj.c \
		   loader_obj.h \
		   log.c \
		   log.h \
		   material.c \
		   material.h \
		   matrix.c \
		   matrix.h \
		   mc.c \
		   mc.h \
		   memory.c \
		   memory.h \
		   metropolis.c \
		   metropolis.h \
		   noise.c \
		   noise.h \
		   octree.c \
		   octree.h \
		   octree_frisken.c \
		   octree_frisken.h \
		   openexrdrv.c \
		   openexrdrv.h \
		   option.c \
		   option.h \
		   parallel.c \
		   parallel.h \
		   pathtrace.c \
		   pathtrace.h \
		   photonmap.c \
		   photonmap.h \
		   polygon.c \
		   polygon.h \
		   prt.c \
		   prt.h \
		   qmc.c \
		   qmc.h \
		   quadric.c \
		   quadric.h \
		   quaternion.c \
		   quaternion.h \
		   raytrace.c \
		   raytrace.h \
		   random.c \
		   random.h \
		   reflection.c \
		   reflection.h \
		   render.c \
		   render.h \
		   rgbe.c \
		   rgbe.h \
		   ri.c \
		   ri.h \
		   subd.c \
		   sh.c \
		   sh.h \
		   shader.c \
		   shader.h \
		   shading.c \
		   shading.h \
		   sis.c \
		   sis.h \
		   sockdrv.c \
		   sockdrv.h \
		   spiral.c \
		   spiral.h \
		   stack.c \
		   stack.h \
		   texture.c \
		   texture.h \
		   transport.c \
		   transport.h \
		   thread.c \
		   thread.h \
		   tiffdrv.c \
		   tiffdrv.h \
		   timer.c \
		   timer.h \
		   util.c \
		   util.h \
		   vector.c \
		   vector.h \
		   zorder2d.c \
		   zorder2d.h 

librib_a_CFLAGS = @X_CFLAGS@
