lib_LIBRARIES = libribase.a

#libribase_a_LDFLAGS = 
libribase_a_SOURCES =   array.c \
			array.h \
			atomic.h \
			dlload.c \
			dlload.h \
			hash.c \
			hash.h \
			list.c \
			list.h \
			log.c \
			log.h \
			matrix.c \
			matrix.h \
			memory.c \
			memory.h \
			parallel.c \
			parallel.h \
			quaternion.c \
			quaternion.h \
			queue.c \
			queue.h \
			random.c \
			random.h \
			stack.c \
			stack.h \
			thread.c \
			thread.h \
			timer.c \
			timer.h \
			util.c \
			util.h \
			vector.c \
			vector.h 

INCLUDES = -I../../include
