lib_LIBRARIES = librirender.a

librirender_a_SOURCES = \
	accel.c \
	accel.h \
	brdf.c \
	brdf.h \
	bvh.c \
	bvh.h \
	film.c \
	film.h \
	filter.c \
	geom.c \
	geom.h \
	hilbert.c \
	hilbert.h \
	hilbert2d.c \
	hilbert2d.h \
	ibl.c \
	ibl.h \
	intersection_state.c \
	intersection_state.h \
	light.c \
	light.h \
	material.c \
	material.h \
	mc.c \
	mc.h \
	noise.c \
	noise.h \
	qmc.c \
	qmc.h \
	ray.c \
	ray.h \
	raytrace.c \
	raytrace.h \
	reflection.c \
	reflection.h \
	render.c \
	render.h \
	scene.c \
	scene.h \
	shader.c \
	shader.h \
	shading.c \
	shading.h \
	specrend.c \
	specrend.h \
	spectrum.c \
	spectrum.h \
	spiral.c \
	spiral.h \
	subdivision.c \
	subdivision.h \
	sunsky.c \
	sunsky.h \
	texture.c \
	texture.h \
	zorder2d.c \
	zorder2d.h

INCLUDES = -I.. -I../basic -I../ri -I../display -I../../include  -I../transport

librirender_a_LIBADD = ../basic/libribasic.a
