lib_LTLIBRARIES = libri.la

libri_la_LDFLAGS = 
libri_la_SOURCES = \
	apitable.c \
	apitable.h \
	attribute.c \
	attribute.h \
	backdoor.c \
	backdoor.h \
	camera.c \
	camera.h \
	context.c \
	context.h \
	declare.c \
	declare.h \
	display.c \
	display.h \
	lightsource.c \
	option.c \
	option.h \
	polygon.c \
	polygon.h \
	quadric.c \
	ri.c \
	subdivision.c \
	transform.c 

INCLUDES = -I.. -I../basic -I../render -I../../include -I../transport

libri_la_LIBADD = ../basic/libribasic.la
