lib_LIBRARIES = libri.a

libri_a_SOURCES = \
	apitable.c \
	apitable.h \
	attribute.c \
	attribute.h \
	backdoor.c \
	backdoor.h \
	camera.c \
	camera.h \
	context.c \
	context.h \
	declare.c \
	declare.h \
	display.c \
	display.h \
	lightsource.c \
	option.c \
	option.h \
	polygon.c \
	polygon.h \
	quadric.c \
	ri.c \
	subdivision.c \
	transform.c 

INCLUDES = -I.. -I../base -I../render -I../../include -I../transport

libri_a_LIBADD = ../base/libribase.a
